# mathsharp

./: .gitignore  Cargo.toml  README.md
src/: geometric_calculations.rs  lib.rs  main.rs  unit_conversions.rs
src/algebra/: test.rs
src/geometry/: geometric_calculations.rs  trigonometry.rs
src/linear_algebra/: matrices.rs
