[package]
name = "mathsharp"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "collection of mathematical functions and resources to assist in solving a wide range of topics"
repository = "https://github.com/JosephGurak/mathsharp"

[dependencies]


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
